tests/textual/error/lengthOfByteString.uplc
(program 0.0.0 [ (builtin lengthOfByteString) (con string "hello world") ])
